# arXiv-mcp

./: .gitignore  README.md  pyproject.toml
src/arxiv_library_mcp/: __init__.py  __main__.py  config.py  server.py
src/arxiv_library_mcp/core/: arxiv_client.py  bibtex_builder.py  clusterer.py  doi_resolver.py  duplicate_detector.py  embedding.py  pdf_processor.py
src/arxiv_library_mcp/db/: chroma_store.py  models.py  sqlite_store.py
src/arxiv_library_mcp/tools/: annotation_tools.py  cluster_tools.py  export_tools.py  import_tools.py  library_tools.py  search_tools.py  tracking_tools.py
src/arxiv_library_mcp/utils/: formatting.py  identifiers.py  rate_limiter.py
tests/: test_chroma_store.py  test_identifiers.py  test_sqlite_store.py
