[project]
name = "arxiv-library-mcp"
version = "0.1.0"
description = "Personal research library MCP server with semantic search, PDF annotations, and preprint tracking"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "arxiv>=2.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "PyMuPDF>=1.24.0",
    "pybtex>=0.24.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
clustering = [
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
arxiv-library-mcp = "arxiv_library_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_library_mcp"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
